--- a/SingletonDesignPattern/pom.xml
+++ b/SingletonDesignPattern/pom.xml
@@ -4,4 +4,8 @@
   <artifactId>SingletonDesignPattern</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   <name>SingletonDesignPattern</name>
+  <properties>
+    <maven.compiler.source>17</maven.compiler.source>
+    <maven.compiler.target>17</maven.compiler.target>
+  </properties>
 </project>
